--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,1 +1,3 @@
-Thanks for registering <%= @user.full_name %>!
+Welcome <%= @user.full_name %>!
+
+<%= link_to "Log Out", login_path, method: :delete, data: { confirm: 'Are you sure you want to log out?' } %>
