--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,5 @@
 Welcome <%= @user.full_name %>!
+<%= link_to "Log In", login_path, method: :get %>
+<br/>
 
 <%= link_to "Log Out", login_path, method: :delete, data: { confirm: 'Are you sure you want to log out?' } %>
